# sbndaq-artdaq

./: .gitignore  CMakeLists.txt  CMakePresets.json  ICARUSTriggerUDP_driver.fcl  pull_request_template.md
sbndaq-artdaq/ArtModules/: CMakeLists.txt
sbndaq-artdaq/ArtModules/Common/: BernCRTAnaV2_module.cc  BernCRTAna_module.cc  BernCRTDumpV2_module.cc  BernCRTZMQAna_module.cc  CAENV1730Dump_module.cc  CAENV1730WaveformAna_module.cc  CMakeLists.txt  EventAna_module.cc  FragmentDump_module.cc  IncompleteEventAna_module.cc  MultiDump_module.cc  dump_CAENV1730.fcl  dump_fraginfo.fcl  dump_multi.fcl
sbndaq-artdaq/ArtModules/DQM/: CMakeLists.txt
sbndaq-artdaq/ArtModules/ICARUS/: CMakeLists.txt  ICARUSGateFilter_module.cc  ICARUSTriggerUDPDump_module.cc  ICARUSTriggerUDPSimpleAna_module.cc  IcarusArtdaqBuildInfo_module.cc  IcarusFragmentNamingService_service.cc  IcarusFragmentWatcher_module.cc  IcarusInput_source.cc  Icarus_fragmentNameHelper.cc  PhysCrateDump_module.cc  PhysCrateSimpleAna_module.cc  PhysCrateViewer_module.cc  PhysCrateWriteICARUSDataFile_module.cc
sbndaq-artdaq/ArtModules/SBND/: BinaryToFragment_module.cc  CMakeLists.txt  CRTAframeReco_module.cc  CRTHitAna_module.cc  CRTSinglePEAna_module.cc  EventAna_module.cc  FragmentToBinary_module.cc  PMTmetrics_module.cc  PTBDump_module.cc  SBNDArtdaqBuildInfo_module.cc  SBNDDAQArtdaqBuildInfo_module.cc  SBNDDAQInput_source.cc  SBNDFragmentNamingService_service.cc  SBNDGateFilter_module.cc  SBNDInput_source.cc  SBNDPMTV1730Ana_module.cc  SBND_fragmentNameHelper.cc  dump_PTB.fcl  filters_standard.fcl  pmtmetrics.fcl  run_anaPMTV1730.fcl  run_anaPMTV1730_wWf.fcl  run_sbndgatefilter.fcl  sbndPDMapAlg.hh
sbndaq-artdaq/ArtModules/SBND/AFrameUtils/: AframeTrack.h  CMakeLists.txt  ChannelMap.cc  ChannelMap.h  Cluster.h  Event.h  Hit.h  aframe3_channel_config.txt  aframe4_channel_config.txt  analyze_event_hits_triggered_aframe3.fcl  helper_functions.h  measurement.py
sbndaq-artdaq/ArtModules/SBND/PMTFakeData/: CMakeLists.txt
sbndaq-artdaq/ArtModules/SBND/SoftwareTrigger/: CMakeLists.txt  CRTMetricProducer_module.cc  CRTmetricproducer.fcl  NeutrinoStreamFilter_module.cc  PMTMetricProducer_module.cc  neutrinostreamfilter.fcl  pmtmetricproducer.fcl  pmtmetricproducer_simulation.fcl  run_pmtmetricproducer.fcl
sbndaq-artdaq/ArtModules/SBND/Trigger/: CMakeLists.txt  CoincidenceFilterLegacy_module.cc  CoincidenceFilter_module.cc  coincidence_filtermodule.fcl  pmtTriggerProducer.fcl  pmtTriggerProducer_module.cc
sbndaq-artdaq/ArtModules/SBND/old_softtrig/: PMTmetrics_module.cc  pmtSoftwareTrigger.hh  pmtmetrics.fcl
sbndaq-artdaq/ArtModules/SBND/testStandTrigger/: CMakeLists.txt  testStandCoincidenceFilter_module.cc  testStandTriggerProducer.fcl  testStandTriggerProducer_module.cc  test_stand_coincidence_filtermodule.fcl
sbndaq-artdaq/ArtModules/fcl/: binary_to_frag.fcl  caen2795Dump.fcl  frag_to_binary.fcl
sbndaq-artdaq/Generators/: CMakeLists.txt
sbndaq-artdaq/Generators/Common/: BernCRTData.hh  BernCRTData_generator.cc  BernCRTFEBConfiguration.cc  BernCRTFEBConfiguration.hh  BernCRTZMQData.hh  BernCRTZMQData_generator.cc  BernCRTZMQ_GeneratorBase.cc  BernCRTZMQ_GeneratorBase.hh  BernCRTZMQ_driver.fcl  BernCRT_GeneratorBase.cc  BernCRT_GeneratorBase.hh  BernCRT_TRACE_defines.h  CAENConfiguration.cc  CAENConfiguration.hh  CAENDecoder.cc  CAENDecoder.hh  CAENException.cc  CAENException.hh  CAENV1730Readout.hh  CAENV1730Readout_generator.cc  CAENV1740Configuration.cc  CAENV1740Configuration.hh  CAENV1740Readout.hh  CAENV1740Readout_generator.cc  CMakeLists.txt  CRTFragGen.hh  CRTFragGen_generator.cc  CircularBuffer.cc  CircularBuffer.hh  ConvertCRTConfiguration.cc  DummyGenerator.hh  DummyGenerator_generator.cc  ExitTimerManager.cc  ExitTimerManager.hh  PoolBuffer.cc  PoolBuffer.hh  SpectraTimeData.hh  SpectraTimeData_generator.cc  SpectraTimeFake.hh  SpectraTimeFake_generator.cc  (+12 more)
sbndaq-artdaq/Generators/Common/Ambient/: ambient_cap_net_raw-0.1-1.el7.src.rpm  ambient_cap_net_raw.spec  ambient_exec-2.c
sbndaq-artdaq/Generators/Common/Bern/: CMakeLists.txt  ConvertBin2Root.C  confsetbias.cc  confsetgain.c  confsetgain.cc  event_sender.c  febconf.cc  febctl.cc  febdrv.cc  febdrv.h  febdrv_modified.cc  febevt.h  febinfluxdb.c  febmon.cc  febmongps.c  febmonrwm.c  febmontrigs.c  febpeek.cc  makeall  shutdown_global  start_febstore  stop_run
sbndaq-artdaq/Generators/Common/BottomInterface/: CMakeLists.txt  CRTInterface.cc  CRTInterface.hh
sbndaq-artdaq/Generators/Common/CAEN/: CAENStatus.cc  CAENTemperature.cc  CMakeLists.txt
sbndaq-artdaq/Generators/Common/GPS/: CMakeLists.txt  GPSBroadcast.cc  GPSBroadcast.hh  GPSInfo.cc  GPSInfo.hh  GPSReceiver.cc  GPSReceiver.hh  Makefile  NetworkReceiver.cc  NetworkReceiver.hh  bcast  gps  (+3 more)
sbndaq-artdaq/Generators/ICARUS/: CMakeLists.txt  CRTFragGen.hh  CRTFragGen_generator.cc  ICARUSTriggerUDP.hh  ICARUSTriggerUDP_generator.cc  ICARUSTriggerV2.hh  ICARUSTriggerV2_generator.cc  ICARUSTriggerV3.hh  ICARUSTriggerV3_generator.cc  PhysCrateData.hh  PhysCrateData_generator.cc  PhysCrateFakeData.hh  PhysCrateFakeData_generator.cc  PhysCrate_GeneratorBase.cc  PhysCrate_GeneratorBase.hh
sbndaq-artdaq/Generators/SBND/: BernCRTSerialReader.hh  BernCRTSerialReader_Test.cc  BernCRTSerialReader_generator.cc  BernCRTV2SerialReader.hh  BernCRTV2SerialReader_Test.cc  BernCRTV2SerialReader_generator.cc  CAENV1730SerialReader.hh  CAENV1730SerialReader_Test.cc  CAENV1730SerialReader_generator.cc  CMakeLists.txt  DAPHNEReader.hh  DAPHNEReader_generator.cc  MBBReader.hh  MBBReader_generator.cc  NevisTPCData.hh  NevisTPCData_generator.cc  NevisTPC_generatorBase.cc  NevisTPC_generatorBase.hh  PennReceiver.hh  PennReceiver_generator.cc  SPECTDCTimestampReader.hh  SPECTDCTimestampReader_Test.cc  SPECTDCTimestampReader_generator.cc  TriggerBoardReader.hh  TriggerBoardReader_generator.cc  WIBReader.hh  WIBReader_generator.cc  backup_MBBReader_generator.txt  berncrtserial.fcl  berncrtserial_test.fcl  caenserial.fcl
sbndaq-artdaq/Generators/Toy/: CMakeLists.txt  ToySimulator.hh  ToySimulator_generator.cc
(+950 files in other folders)
